2005-01-15  Kjartan Maraas  <kmaraas@gnome.org>

	* POTFILES.in: Add new modemlights applet. Add .server.in files
	from the NULL_Applet. Add missing file in multiload.
	* nb.po: Update

2005-01-15  Hendrik Brandt  <heb@gnome-de.org>

	* de.po: Updated German translation.

2005-01-15  Takeshi AIHANA <aihana@gnome.gr.jp>

	* ja.po: Updated Japanese translation.

2005-01-15  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

2005-01-14  Marcel Telka  <marcel@telka.sk>

	* sk.po: Updated Slovak translation.

2005-01-14  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.

2005-01-14  Laurent Dhima  <laurenti@alblinux.net>

	* sq.po: Updated Albanian translation by Elian Myftiu.

2005-01-13  Žygimantas Beručka  <uid0@akl.lt>

	* lt.po: Updated Lithuanian translation.

2005-01-11  Hendrik Brandt  <heb@gnome-de.org>

	* de.po: Updated German translation.

2005-01-11  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

2005-01-11  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.

2005-01-10  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.

2005-01-11  Kjartan Maraas  <kmaraas@gnome.org>

	* POTFILES.in: Remove removed files.
	* nb.po: Update
	* no.po: Update

2005-01-04  Alessio Frusciante  <algol@firenze.linux.it>

	* it.po: Updated Italian translation by
	Luca Ferretti <elle.uca@infinito.it>.

2005-01-03  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.

2005-01-02  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2005-01-01  Takeshi AIHANA <aihana@gnome.gr.jp>

	* ja.po: Updated Japanese translation.

2004-12-29  Kostas Papadimas <pkst@gnome.org>

	* el.po: Updated  Greek translation.

2004-12-29  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.
