@@ -84,6 +84,10 @@ mixer/dock.c
 mixer/load.c
 mixer/mixer.schemas.in
 mixer/preferences.c
+modemlights/GNOME_ModemLights.server.in.in
+modemlights/GNOME_ModemLights.xml
+modemlights/modem-applet.c
+modemlights/modemlights.glade
 multiload/GNOME_MultiLoadApplet_Factory.server.in.in
 multiload/GNOME_MultiloadApplet.xml
 multiload/cpuload.c
@@ -97,7 +101,10 @@ multiload/multiload.schemas.in
 multiload/netload.c
 multiload/properties.c
 multiload/swapload.c
+null_applet/GNOME_CDPlayerApplet.server.in
+null_applet/GNOME_MailcheckApplet_Factory.server.in
 null_applet/GNOME_NullApplet_Factory.server.in.in
+null_applet/GNOME_Panel_WirelessApplet.server.in
 null_applet/null_applet.c
 stickynotes/GNOME_StickyNotesApplet.server.in.in
 stickynotes/GNOME_StickyNotesApplet.xml
@@ -110,11 +117,3 @@ stickynotes/stickynotes_callbacks.c
 trashapplet/GNOME_Panel_TrashApplet.server.in.in
 trashapplet/GNOME_Panel_TrashApplet.xml
 trashapplet/src/trashapplet.c
-null_applet/GNOME_CDPlayerApplet.server.in
-null_applet/GNOME_MailcheckApplet_Factory.server.in
-null_applet/GNOME_Panel_WirelessApplet.server.in
-modemlights/GNOME_ModemLights.server.in
-modemlights/GNOME_ModemLights.server.in.in
-modemlights/GNOME_ModemLights.xml
-modemlights/modem-applet.c
-modemlights/modemlights.glade
