@@ -1,3 +1,8 @@
+2005-01-15  Adam Weinberger  <adamw@gnome.org>
+
+	* POTFILES.in: Remove ../modemlights/GNOME_ModemLights.server.in.in.h.
+	  Realphabatize after Kjartan's additions.
+
 2005-01-15  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* POTFILES.in: Add new modemlights applet. Add .server.in files
